[package]
name = "gbt"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bytes = "1.10.1"
clap = { version = "4.5.37", features = ["derive"] }
hex = "0.4.3"
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["json", "blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_bencode = "0.2.4"
serde_bytes = "0.11.17"
serde_json = "1.0.140"
serde_urlencoded = "0.7.1"
sha1 = "0.10.6"
tempfile = "3.19.1"
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["full"] }
